# filty

./: .gitignore  Makefile  Pipfile  README.rst  precommit.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: static.yml
docs/: requirements.rst
docs/source/: api.rst  conf.py  index.rst  requirements.rst
examples/: build_doc_images.py
filty/: __init__.py  __version__.py  filty.py  utility.py
imgfilt/: __version__.py  imgfilt.py  utility.py
src/imgfilt/: __init__.py  imgfilt.py  utility.py
tests/: common.py  test_filty.py  test_imgfilt.py  test_utility.py
